# perf-agent

./: .gitignore  BUILDING.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  RELEASES.md  SECURITY.md  TESTING.md  TEST_RESULTS.md  TEST_SUMMARY.md  TEST_SUMMARY.txt  go.mod  go.sum  main.go  main2.go  main3.go  main_test.go  perf_bpfeb.go  perf_bpfel.go  perf_event.go
bench/: README.md
blazesym/: blazesym.go  blazesym.h
bpf/: CMakeLists.txt  cpu.bpf.c  gpu_hip_launch.bpf.c  gpu_linux_observe.bpf.c  offcpu.bpf.c  offcpu_dwarf.bpf.c  perf.bpf.c  perf_dwarf.bpf.c  unwind_common.h  vmlinux.h
cpu/: cpu_arm64_bpfel.go  cpu_usage_collector.go  cpu_usage_collector_test.go  cpu_x86_bpfel.go  gen.go  perf_events.go  pmu_monitor.go
docs/: architecture.excalidraw  cpu-vs-offcpu.excalidraw  debuginfod-symbolization.md  dwarf-unwinding-design.md  perf-data-output.md  pmu-counters.excalidraw  post-prod-hardening.md  python-profiling.md  unwind-auto-refinement-design.md
examples/: README.md  llm_decode_attention_demo.py  real_hip_attention_workload.rs  rocprofiler_sdk_preload_bridge.cpp
examples/rust-pgo/: Cargo.toml  README.md  pgo-cycle.sh
examples/rust-pgo/src/: main.rs
gpu/: exporter.go  exporter_test.go  folded_export.go  folded_export_test.go  manager.go  manager_test.go  pprof_projection.go  pprof_projection_test.go  timeline.go  timeline_test.go  types.go  (+1 more)
test/debuginfod/rust-sample/: Cargo.toml  README.md
test/debuginfod/rust-sample/.cargo/: config.toml
test/debuginfod/rust-sample/src/: main.rs
(+427 files in other folders)
